<resources>
    <string name="app_name">씨네마천국</string>
    <string name="user_name">ows3090</string>
    <string name="user_email">ows3090@naver.com</string>
    <string name="menu_movie">영화목록</string>
    <string name="menu_movieAPI">영화 API</string>
    <string name="menu_register">예매하기</string>
    <string name="menu_setting">사용자 설정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_activity_name">영화 목록</string>
    <string name="movie_name">영화명</string>
    <string name="movie_info">상세정보</string>
    <string name="reservation_sort">예매율순</string>
    <string name="curation_sort">큐레이션</string>
    <string name="due_sort">상영예정</string>
    <string name="moviereservation_text">예매율</string>
    <string name="movierank_text">평점</string>
    <string name="movieaudience_text">누적관객수</string>
    <string name="moviestory_text">줄거리</string>
    <string name="moviestorydetail_text">군도, 백성을 구하라!\n양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년. 힘 없는 백성의 편이 되어 세상을 바로잡고자 하는 의적떼인 군도(群盜), 지리산 추설이 있었다.         \n\n쌍칼 도치 vs 백성의 적 조윤\n잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이, 나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈, 삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는 죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 巨星) 도치로 거듭난다.         \n\n뭉치면 백성, 흩어지면 도적!\n망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적, 조윤과 한 판 승부를 시작하는데...</string>
    <string name="moviedirectorandperformer_text">감독/출연</string>
    <string name="moviedirector_text">감독</string>
    <string name="moviedirectorresult_text">윤종빈</string>
    <string name="movieperformer_text">출연</string>
    <string name="movieperformerresult_text">하정우(도치), 강동원(조윤)</string>
    <string name="moviegallery_text">갤러리</string>
    <string name="moviesummary_text">한줄평</string>
    <string name="writing_text">작성하기</string>
    <string name="allview_text">모두 보기</string>
    <string name="reservation_text">예매하기</string>
    <string name="comment_activity_name">한줄평 목록</string>
    <string name="movie_rating_text">평점을 입력해주세요.</string>
    <string name="writing_activity_name">한줄평 작성</string>
</resources>