<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="ows.kotlinstudy.movierankapp.viewmodel.MovieMainViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MovieMainFragment">

        <ProgressBar
            android:id="@+id/progresBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/menuLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reservationSortButton"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_margin="0dp"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/menu_order"
                android:onClick="@{() -> viewmodel.requestSimpleMovieList(1)}"
                android:padding="10dp"
                android:text="@string/reservation_sort"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/curationSortButton"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/menu_order"
                android:onClick="@{() -> viewmodel.requestSimpleMovieList(2)}"
                android:padding="10dp"
                android:text="@string/curation_sort"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dueSortButton"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/menu_order"
                android:onClick="@{() -> viewmodel.requestSimpleMovieList(3)}"
                android:padding="10dp"
                android:text="@string/due_sort"
                android:textColor="@color/white"
                android:textSize="20dp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>